--- a/Jinny/Jinny.vcxproj.filters
+++ b/Jinny/Jinny.vcxproj.filters
@@ -288,9 +288,6 @@
     <ClCompile Include="PongGameScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ExactDecimal.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Game.cpp">
       <Filter>Game Systems\Source Files</Filter>
     </ClCompile>
@@ -473,9 +470,6 @@
     <ClInclude Include="PongGameScene.h">
       <Filter>Scene\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ExactDecimal.h">
-      <Filter>Framework\Physics\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Game.h">
       <Filter>Game Systems\Header Files</Filter>
     </ClInclude>
@@ -488,5 +482,8 @@
     <ClInclude Include="RigidBody.h">
       <Filter>Framework\Physics\Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
   </ItemGroup>
 </Project>
