Began rewriting collision engine so that it is simpler and better written Vector x and y can now be retrieved using indexs to make functions not x or y based Some usless methods have been removed from rigid bodies class Some rigid body attributes have been converted to vectors Began planning the engine structure in physics system

--- a/Jinny/Jinny.vcxproj.filters
+++ b/Jinny/Jinny.vcxproj.filters
@@ -270,9 +270,6 @@
     <ClCompile Include="StaticRigidBodyPhysicsComponent.cpp">
       <Filter>Object and Components\Components\Physics Components\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Vector.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="DynamicRigidBodyPhysicsComponent.cpp">
       <Filter>Object and Components\Components\Physics Components\Source Files</Filter>
     </ClCompile>
@@ -293,6 +290,9 @@
     </ClCompile>
     <ClCompile Include="GridCollisionManager.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Vector.cpp">
+      <Filter>Framework\Physics\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
