--- a/Jinny/Jinny.vcxproj.filters
+++ b/Jinny/Jinny.vcxproj.filters
@@ -279,20 +279,23 @@
     <ClCompile Include="MaterialManager.cpp">
       <Filter>Framework\Physics\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="PongGameScene.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Game.cpp">
       <Filter>Game Systems\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="RigidBody.cpp">
       <Filter>Framework\Physics\Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="GridCollisionManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Vector.cpp">
       <Filter>Framework\Physics\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicsEngine.cpp">
+      <Filter>System Aids\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GridPhysicsEngine.cpp">
+      <Filter>System Aids\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="PongGameScene.cpp">
+      <Filter>Scene\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -473,11 +476,14 @@
     <ClInclude Include="GameMessage.h">
       <Filter>System Aids\Messaging\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="GridCollisionManager.h">
-      <Filter>System Aids\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="RigidBody.h">
       <Filter>Framework\Physics\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GridPhysicsEngine.h">
+      <Filter>System Aids\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsEngine.h">
+      <Filter>System Aids\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
