--- a/Jinny/Jinny.vcxproj
+++ b/Jinny/Jinny.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{cb6716af-a8bb-48c1-bd60-6a036fec97f9}</ProjectGuid>
     <RootNamespace>Jinny</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Relic</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
