Added message sending to Physics System Created some new useful components Creating a test pong game Small changes to physics engine for collision detection Plans to rework messaging system to address issues, hence the branch

--- a/Jinny/Jinny.vcxproj
+++ b/Jinny/Jinny.vcxproj
@@ -152,11 +152,15 @@
     <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="ButtonAnimationComponent.cpp" />
     <ClCompile Include="CameraCoreComponent.cpp" />
-    <ClCompile Include="Color.cpp" />
+    <ClCompile Include="Colour.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="DynamicRigidBodyPhysicsComponent.cpp" />
+    <ClCompile Include="InputComponent.cpp" />
+    <ClCompile Include="PongBallPhysicsComponent.cpp" />
+    <ClCompile Include="PongPaddleInputComponent.cpp" />
+    <ClCompile Include="PongPaddlePhysicsComponent.cpp" />
+    <ClCompile Include="RigidBodyPhysicsComponent.cpp" />
     <ClCompile Include="SceneChangeCoreComponent.cpp" />
     <ClCompile Include="Font.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
@@ -185,6 +189,7 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="Graphic.cpp" />
+    <ClCompile Include="SolidColourGraphicsComponent.cpp" />
     <ClCompile Include="StartScene.cpp" />
     <ClCompile Include="StaticRigidBodyPhysicsComponent.cpp" />
     <ClCompile Include="TextGraphicsComponent.cpp" />
@@ -197,14 +202,17 @@
     <ClInclude Include="AssetManager.h" />
     <ClInclude Include="ButtonAnimationComponent.h" />
     <ClInclude Include="CameraCoreComponent.h" />
-    <ClInclude Include="Color.h" />
+    <ClInclude Include="Colour.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="CoreComponent.h" />
     <ClInclude Include="Deliverable.h" />
     <ClInclude Include="GameMessage.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="DynamicRigidBodyPhysicsComponent.h" />
+    <ClInclude Include="PongBallPhysicsComponent.h" />
+    <ClInclude Include="PongPaddleInputComponent.h" />
+    <ClInclude Include="PongPaddlePhysicsComponent.h" />
+    <ClInclude Include="RigidBodyPhysicsComponent.h" />
     <ClInclude Include="LazyMessageSender.h" />
     <ClInclude Include="SceneChangeCoreComponent.h" />
     <ClInclude Include="FileLoader.h" />
@@ -252,6 +260,7 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="Graphic.h" />
+    <ClInclude Include="SolidColourGraphicsComponent.h" />
     <ClInclude Include="StartScene.h" />
     <ClInclude Include="StaticRigidBodyPhysicsComponent.h" />
     <ClInclude Include="TextGraphicsComponent.h" />
