Added infrastructure for proper logging Added basic button components Differed between animation component and dynamic animation component

--- a/Jinny/Jinny.vcxproj
+++ b/Jinny/Jinny.vcxproj
@@ -151,15 +151,18 @@
     <ClCompile Include="AssetLoaderGraphicsComponent.cpp" />
     <ClCompile Include="AssetManager.cpp" />
     <ClCompile Include="ButtonAnimationComponent.cpp" />
+    <ClCompile Include="ButtonLogicComponent.cpp" />
     <ClCompile Include="CameraCoreComponent.cpp" />
     <ClCompile Include="Colour.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="Core.cpp" />
+    <ClCompile Include="DynamicAnimationComponent.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameSystem.cpp" />
     <ClCompile Include="Identifier.cpp" />
     <ClCompile Include="InputComponent.cpp" />
+    <ClCompile Include="LoggingSystem.cpp" />
     <ClCompile Include="NewPongGameComponent.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
     <ClCompile Include="PongBallPhysicsComponent.cpp" />
@@ -179,7 +182,7 @@
     <ClCompile Include="InputSystem.cpp" />
     <ClCompile Include="LoggingComponent.cpp" />
     <ClCompile Include="MaterialManager.cpp" />
-    <ClCompile Include="MouseInputComponent.cpp" />
+    <ClCompile Include="ButtonInputComponent.cpp" />
     <ClCompile Include="NullGraphics.cpp" />
     <ClCompile Include="Physics.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
@@ -207,17 +210,22 @@
     <ClInclude Include="AnimationComponent.h" />
     <ClInclude Include="AssetManager.h" />
     <ClInclude Include="ButtonAnimationComponent.h" />
+    <ClInclude Include="ButtonLogicComponent.h" />
+    <ClInclude Include="ButtonType.h" />
     <ClInclude Include="CameraCoreComponent.h" />
     <ClInclude Include="Colour.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="Direction.h" />
+    <ClInclude Include="DynamicAnimationComponent.h" />
     <ClInclude Include="GameType.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GraphicsType.h" />
     <ClInclude Include="Identifier.h" />
     <ClInclude Include="InputType.h" />
+    <ClInclude Include="LoggingSystem.h" />
+    <ClInclude Include="LoggingType.h" />
     <ClInclude Include="MessageBus.h" />
     <ClInclude Include="MessageExchanger.h" />
     <ClInclude Include="MessageType.h" />
@@ -250,7 +258,7 @@
     <ClInclude Include="InputSystem.h" />
     <ClInclude Include="MessageReceiver.h" />
     <ClInclude Include="MessageSender.h" />
-    <ClInclude Include="MouseInputComponent.h" />
+    <ClInclude Include="ButtonInputComponent.h" />
     <ClInclude Include="NullGraphics.h" />
     <ClInclude Include="ObjectInput.h" />
     <ClInclude Include="GameObjectManager.h" />
